# serializer version: 1
# name: test_sensors[sensor.schwechat_active_warnings-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.schwechat_active_warnings',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Active warnings',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Active warnings',
    'platform': 'geosphere_austria_warnings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'active_warnings',
    'unique_id': '30740-active_warnings',
    'unit_of_measurement': 'warnings',
  })
# ---
# name: test_sensors[sensor.schwechat_active_warnings-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by GeoSphere Austria',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Schwechat Active warnings',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'warnings',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.schwechat_active_warnings',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_sensors[sensor.schwechat_advance_warning_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.schwechat_advance_warning_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Advance warning level',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Advance warning level',
    'platform': 'geosphere_austria_warnings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'advance_warning_level',
    'unique_id': '30740-advance_warning_level',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.schwechat_advance_warning_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by GeoSphere Austria',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Schwechat Advance warning level',
      'municipality': 'Schwechat',
      'warning_1_change_id': 2,
      'warning_1_color': 'yellow',
      'warning_1_course_id': 1,
      'warning_1_description': 'Yellow rain warning from Tue, 28.03.2023 08:00 until Tue, 28.03.2023 18:00',
      'warning_1_end': '2023-03-28T16:00:00+00:00',
      'warning_1_impacts': '* Local flooding is possible.',
      'warning_1_instruction': '* Avoid underpasses and flooded roads!',
      'warning_1_level': 1,
      'warning_1_meteo_text': 'Persistent rain with amounts between 40 and 60 mm.',
      'warning_1_name': 'Rain',
      'warning_1_start': '2023-03-28T06:00:00+00:00',
      'warning_1_type': 2,
      'warning_1_update_reason': '',
      'warning_1_warning_id': 4150,
      'warning_count': 1,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.schwechat_advance_warning_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_sensors[sensor.schwechat_current_warning_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.schwechat_current_warning_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Current warning level',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Current warning level',
    'platform': 'geosphere_austria_warnings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'current_warning_level',
    'unique_id': '30740-current_warning_level',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.schwechat_current_warning_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by GeoSphere Austria',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Schwechat Current warning level',
      'municipality': 'Schwechat',
      'warning_1_change_id': 6,
      'warning_1_color': 'orange',
      'warning_1_course_id': 2,
      'warning_1_description': 'Orange wind warning from Mon, 27.03.2023 08:00 until Mon, 27.03.2023 18:00',
      'warning_1_end': '2023-03-27T16:00:00+00:00',
      'warning_1_impacts': '* Branches may fall and objects may be thrown around.',
      'warning_1_instruction': '* Be careful in forests, parks and avenues!',
      'warning_1_level': 2,
      'warning_1_meteo_text': 'Strong northwest winds with gusts between 60 and 80 km/h.',
      'warning_1_name': 'Storm',
      'warning_1_start': '2023-03-27T06:00:00+00:00',
      'warning_1_type': 1,
      'warning_1_update_reason': '',
      'warning_1_warning_id': 4149,
      'warning_count': 1,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.schwechat_current_warning_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
# name: test_sensors[sensor.schwechat_warning_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'none',
        'yellow',
        'orange',
        'red',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.schwechat_warning_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Warning level',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Warning level',
    'platform': 'geosphere_austria_warnings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'warning_level',
    'unique_id': '30740-warning_level',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.schwechat_warning_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by GeoSphere Austria',
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Schwechat Warning level',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'none',
        'yellow',
        'orange',
        'red',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.schwechat_warning_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'orange',
  })
# ---
